traefik-helm/base/service.yaml
---
# Source: traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app: traefik
    chart: traefik-1.87.1
    release: "traefik"
    heritage: "Helm"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: traefik
    release: traefik
  ports:
  - port: 443
    name: https
    targetPort: https
  - port: 80
    name: http
    targetPort: http
